--- a/index.html
+++ b/index.html
@@ -146,6 +146,63 @@
       </div>
     </nav>
 
+    <!-- Slider -->
+     <section class="pt-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <!-- Menu -->
+          </div>
+          <div class="col-9">
+            <!-- Slider -->
+             <div id="slider"  class="carousel slide border rounded-5" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#slider" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/slider-1.jpg" alt="Slider 1" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-2.jpg" alt="Slider 2" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-3.jpg" alt="Slider 3" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-4.jpg" alt="Slider 4" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-5.jpg" alt="Slider 5" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-6.jpg" alt="Slider 6" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/slider-7.jpg" alt="Slider 7" class="d-block w-100">
+                </div>
+
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Önceki</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Sonraki</span>
+              </button>
+             </div>
+          </div>
+        </div>
+      </div>
+     </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
