--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>E-commerce</title>
+    <title>Hızlıpazar</title>
   </head>
   <body class="bg-light">
     <!-- Header -->
@@ -47,7 +47,7 @@
                     >Sepetim</span
                   >
                   <span
-                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning">
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-color">
                     0
                   </span>
                 </a>
@@ -123,16 +123,15 @@
                 <li><a class="dropdown-item" href="#">Motosiklet</a></li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Anne, Bebek</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Bebek</a></li>
                 <li><a class="dropdown-item" href="#">Emzirme</a></li>
                 <li><a class="dropdown-item" href="#">Anne</a></li>
                 <li><a class="dropdown-item" href="#">Çocuk</a></li>
-                <li><a class="dropdown-item" href="#"></a>Bebek Odası</a></li>
+                <li><a class="dropdown-item" href="#">Bebek Odası</a></li>
                 <li><a class="dropdown-item" href="#">Güvenlik</a></li>
-
               </ul>
             </li>
           </ul>
@@ -149,13 +148,22 @@
     <!-- Slider -->
      <section class="pt-3">
       <div class="container">
-        <div class="row">
-          <div class="col-3">
+        <div class="card">
+        <div class="row p-1 p-lg-2 gx-1">
+          <div class="col-lg-3 d-none d-lg-block">
             <!-- Menu -->
+             <nav class="nav nav-pills flex-column flex-nowrap  slider_nav">
+              <a href="#" class="nav-link active">Tümü</a>
+              <a href="#" class="nav-link">Elektronik</a>
+              <a href="#" class="nav-link">Moda</a>
+              <a href="#" class="nav-link">Ev, Yaşam</a>
+              <a href="#" class="nav-link">Oto, Bahçe ,Yapı Market</a>
+              <a href="#" class="nav-link">Anne, Bebek</a>
+             </nav>
           </div>
-          <div class="col-9">
+          <div class="col-12 col-lg-9">
             <!-- Slider -->
-             <div id="slider"  class="carousel slide border rounded-5" data-bs-ride="carousel">
+             <div id="slider" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -167,25 +175,25 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/slider-1.jpg" alt="Slider 1" class="d-block w-100">
+                  <img src="img/slider-1.jpg" alt="Slider 1" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-2.jpg" alt="Slider 2" class="d-block w-100">
+                  <img src="img/slider-2.jpg" alt="Slider 2" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-3.jpg" alt="Slider 3" class="d-block w-100">
+                  <img src="img/slider-3.jpg" alt="Slider 3" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-4.jpg" alt="Slider 4" class="d-block w-100">
+                  <img src="img/slider-4.jpg" alt="Slider 4" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-5.jpg" alt="Slider 5" class="d-block w-100">
+                  <img src="img/slider-5.jpg" alt="Slider 5" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-6.jpg" alt="Slider 6" class="d-block w-100">
+                  <img src="img/slider-6.jpg" alt="Slider 6" class="d-block w-100 rounded">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slider-7.jpg" alt="Slider 7" class="d-block w-100">
+                  <img src="img/slider-7.jpg" alt="Slider 7" class="d-block w-100 rounded">
                 </div>
 
               </div>
@@ -200,6 +208,7 @@
              </div>
           </div>
         </div>
+      </div>
       </div>
      </section>
 
