Ürün kartları kısmı eklendi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Hızlıpazar</title>
   </head>
-  <body class="bg-light">
+  <body class="bg-light mb-5">
     <!-- Header -->
     <header>
       <section class="top-bar">
@@ -153,8 +153,8 @@
           <div class="col-lg-3 d-none d-lg-block">
             <!-- Menu -->
              <nav class="nav nav-pills flex-column flex-nowrap  slider_nav">
-              <a href="#" class="nav-link active">Tümü</a>
-              <a href="#" class="nav-link">Elektronik</a>
+              <a href="#" class="nav-link ">Tüm Kategoriler</a>
+              <a href="#" class="nav-link active">Elektronik</a>
               <a href="#" class="nav-link">Moda</a>
               <a href="#" class="nav-link">Ev, Yaşam</a>
               <a href="#" class="nav-link">Oto, Bahçe ,Yapı Market</a>
@@ -211,6 +211,165 @@
       </div>
       </div>
      </section>
+
+     <!-- Product Cards-->
+
+     <section class="pt-3">
+      <div class="container ">
+        <h3 class="h4 mb-1 mb-lg-3">Son Eklenenler</h3>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-4 g-4 ">
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <span class="badge bg-danger">En Çok Satılan #1</span>
+                <img src="img/img-1.jpg" alt="Product 1" class="card-img-top">
+              </div>
+             <div class="border-top info-wrap">
+              <a href="" class="float-end btn btn-light">
+                <i class="fa fa-heart"></i>
+              </a>
+              <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 13 128 GB Beyaz</a>
+              <div class="price-wrap">
+                <span class="price-discount">34.399 TL</span>
+                <del class="price">38.999 TL</del>
+              </div>
+             </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-2.jpg" alt="Product 2" class="card-img-top">
+                <span class="badge bg-success">Avantajlı Ürün</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 13 128 GB Siyah</a>
+                <div class="price-wrap">
+                  <span class="price-discount">34.199 TL</span>
+                  <del class="price">38.699 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-3.jpg" alt="Product 3" class="card-img-top">
+                <span class="badge bg-success">Avantajlı Ürün</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Poco</b> C65 256 GB 8 GB Ram</a>
+                <div class="price-wrap">
+                  <span class="price-discount">8.299 TL</span>
+                  <del class="price">10.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-4.jpg" alt="Product 4" class="card-img-top">
+
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Xiaomi</b> Redmi Note 13 Pro 512GB 12GB </a>
+                <div class="price-wrap">
+                  <span class="price-discount">17.189 TL</span>
+                  <del class="price">19.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-5.jpg" alt="Product 5" class="card-img-top">
+                <span class="badge bg-warning">%2,99 Oranlı Kredi</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 16 256 GB Çöl Titanyum</a>
+                <div class="price-wrap">
+                  <span class="price-discount">94.999 TL</span>
+                  <del class="price">109.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-6.jpg" alt="Product 6" class="card-img-top">
+                <span class="badge bg-danger">En Çok Satılan #19</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Samsung</b>  Galaxy A06 128 GB 4 GB Ram</a>
+                <div class="price-wrap">
+                  <span class="price-discount">7.199 TL</span>
+                  <del class="price">8.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-7.jpg" alt="Product 7" class="card-img-top">
+                <span class="badge bg-success">Sepete Özel Fiyat</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Samsung</b> Galaxy S24 FE 128 GB 8 GB Ram</a>  
+                <div class="price-wrap">
+                  <span class="price-discount">25.169 TL</span>
+                  <del class="price">29.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div class="col">
+            <div class="card shadow" >
+              <div class="img-wrap">
+                <img src="img/img-8.jpg" alt="Product 8" class="card-img-top">
+                <span class="badge bg-warning">%2.99 Oranlı Kredi</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="" class="float-end btn btn-light">
+                  <i class="fa fa-heart"></i>
+                </a>
+                <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 15 128 GB Yeşil</a>
+                <div class="price-wrap"></div>
+                  <span class="price-discount">52.299 TL</span>
+                  <del class="price">59.999 TL</del>
+                </div>
+              </div>
+            </div>
+          </div>  
+          
+
+        </div>
+      </div>
+     </section>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
