Detay sayfasındaki resim kutusu kısmı oluşturuldu

--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
                 <img src="img/img-1.jpg" alt="Product 1" class="card-img-top">
               </div>
              <div class="border-top info-wrap">
-              <a href="" class="float-end btn btn-light">
+              <a href="details.html" class="float-end btn btn-light">
                 <i class="fa fa-heart"></i>
               </a>
-              <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 13 128 GB Beyaz</a>
+              <a href="details.html" class="title text-truncate"> <b>Apple</b> iPhone 13 128 GB Beyaz</a>
               <div class="price-wrap">
                 <span class="price-discount">34.399 TL</span>
                 <del class="price">38.999 TL</del>
