--- a/details.html
+++ b/details.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="path-to-fslightbox.css">
-
+    <link rel="stylesheet" href="path-to-fslightbox.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -96,39 +95,221 @@
           <div class="col-lg-5">
             <div class="gallery-wrap">
               <div class="img-big-wrap img-thumbnail">
-                <a href="img/product-img-big-1.jpeg" data-type="image" data-fslightbox>
+                <a
+                  href="img/product-img-big-1.jpeg"
+                  data-type="image"
+                  data-fslightbox>
                   <img src="img/product-img-big-1.jpeg" />
                 </a>
               </div>
               <div class="thumbs-wrap">
-                <a href="img/product-img-big-1.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-1.jpeg" alt="Product 1" />
+                <a
+                  href="img/product-img-big-1.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-1.jpeg"
+                    alt="Product 1" />
                 </a>
-                <a href="img/product-img-big-2.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-2.jpeg" alt="Product 2" />
+                <a
+                  href="img/product-img-big-2.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-2.jpeg"
+                    alt="Product 2" />
                 </a>
-                <a href="img/product-img-big-3.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-3.jpeg" alt="Product 3" />
+                <a
+                  href="img/product-img-big-3.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-3.jpeg"
+                    alt="Product 3" />
                 </a>
-                <a href="img/product-img-big-4.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-4.jpeg" alt="Product 4" />
+                <a
+                  href="img/product-img-big-4.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-4.jpeg"
+                    alt="Product 4" />
                 </a>
-                <a href="img/product-img-big-5.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-5.jpeg" alt="Product 5" />
+                <a
+                  href="img/product-img-big-5.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-5.jpeg"
+                    alt="Product 5" />
                 </a>
-                <a href="img/product-img-big-6.jpeg" data-type="image" data-fslightbox>
-                  <img height="60" src="img/product-img-6.jpeg" alt="Product 6" />
+                <a
+                  href="img/product-img-big-6.jpeg"
+                  data-type="image"
+                  data-fslightbox>
+                  <img
+                    height="60"
+                    src="img/product-img-6.jpeg"
+                    alt="Product 6" />
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-7">
-            <h1>Apple iPhone 13 128 GB Beyaz</h1>
+            <article>
+              <h4 class="title text-dark">Apple iPhone 13 128 GB Beyaz</h4>
+              <div class="rating-wrap">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+              </div>
+              <p class="text-success">Stokta 90 adet kaldı.</p>
+              <div class="mb-3">
+                <b class="price h">34.399 TL</b>
+                <del class="price">38.999 TL</del>
+              </div>
+              <div class="product-description mb-3">
+                <p>
+                  iPhone 13 128 GB beyaz, <b>geliştirilmiş kamerası</b>,
+                  <b>dayanıklı tasarımı</b>, işlemcisi, 128 GB dahili hafızası
+                  ve <b>uzun pil ömrü</b> ile kullanıcılara sunulur.
+                </p>
+                <p>
+                  Ekranının güçlü parlaklığının yanı sıra
+                  <b>hem suya hem de toza dayanıklı tasarımı</b>, cihazın
+                  işlevselliğini arttırır. Bununla birlikte, güç verimliliği
+                  sayesinde de <b>üst düzey bir performans</b> sunar.
+                </p>
+
+                <dl class="row border-bottom">
+                  <dt class="col-3">Ekran Boyutu</dt>
+                  <dd class="col-9">6.1 İnç</dd>
+                  <dt class="col-3">Dahili Depolama</dt>
+                  <dd class="col-9">128 GB</dd>
+                  <dt class="col-3">Bellek (RAM)</dt>
+                  <dd class="col-9">4 GB</dd>
+                </dl>
+                <div class="row mb-3">
+                  <div class="col-md-4 col-6 mb-2">
+                    <label class="form-label">Depolama Kapasitesi</label>
+                    <select name="Depolama Kapasitesi" class="form-select">
+                      <option value="1">128 GB</option>
+                      <option value="2">256 GB</option>
+                      <option value="3">512 GB</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="buttons">
+                  <a href="#" class="btn btn-warning"
+                    ><i class="fa fa-shopping-basket me-1"></i>Sepete Ekle</a
+                  >
+                  <a href="#" class="btn btn-light"
+                    ><i class="fa-regular fa-heart me-1"></i>Listeye Ekle</a
+                  >
+                </div>
+              </div>
+            </article>
           </div>
         </div>
       </div>
     </section>
-    
+
+    <section class="mt-3">
+      <div class="container">
+        <h4 class="mb-3">Benzer Ürünler</h4>
+        <div class="row gy-3">
+          <div class="col-lg-3 col-sm-6 col-12">
+            <div class="card shadow">
+              <div class="img-wrap">
+                <img src="img/img-2.jpg" alt="Product 2" class="card-img-top" />
+                <span class="badge bg-success">Avantajlı Ürün</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="#" class="title text-truncate">
+                  <b>Apple</b> iPhone 13 128 GB Siyah</a
+                >
+                <div class="price-wrap mb-3">
+                  <span class="price-discount">34.199 TL</span>
+                  <del class="price">38.699 TL</del>
+                </div>
+                <a href="#" class="btn btn-light w-100">
+                  <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 col-12">
+            <div class="card shadow">
+              <div class="img-wrap">
+                <img src="img/img-3.jpg" alt="Product 3" class="card-img-top" />
+                <span class="badge bg-success">Avantajlı Ürün</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="#" class="title text-truncate">
+                  <b>Poco</b> C65 256 GB 8 GB Ram</a
+                >
+                <div class="price-wrap mb-3">
+                  <span class="price-discount">8.299 TL</span>
+                  <del class="price">10.999 TL</del>
+                </div>
+                <a href="#" class="btn btn-light w-100">
+                  <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 col-12">
+            <div class="card shadow">
+              <div class="img-wrap">
+                <img src="img/img-4.jpg" alt="Product 4" class="card-img-top" />
+              </div>
+              <div class="border-top info-wrap">
+                <a href="#" class="title text-truncate">
+                  <b>Xiaomi</b> Redmi Note 13 Pro 512GB 12GB</a
+                >
+                <div class="price-wrap mb-3">
+                  <span class="price-discount">17.189 TL</span>
+                  <del class="price">19.999 TL</del>
+                </div>
+                <a href="#" class="btn btn-light w-100">
+                  <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 col-12">
+            <div class="card shadow">
+              <div class="img-wrap">
+                <img src="img/img-5.jpg" alt="Product 5" class="card-img-top" />
+                <span class="badge bg-warning">%2.99 Oranlı Kredi</span>
+              </div>
+              <div class="border-top info-wrap">
+                <a href="#" class="title text-truncate">
+                  <b>Apple</b> iPhone 16 Pro 256 GB Çöl Titanyum</a
+                >
+                <div class="price-wrap mb-3">
+                  <span class="price-discount">94.999 TL</span>
+                  <del class="price">98.999 TL</del>
+                </div>
+                <a href="#" class="btn btn-light w-100">
+                  <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="mt-3 py-4">
@@ -179,63 +360,5 @@
     <script src="js/fslightbox-basic-3.4.2/fslightbox.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const locationButton = document.getElementById("locationButton");
-        const locationText = document.getElementById("locationText");
-
-        function getLocation() {
-          if (navigator.geolocation) {
-            locationText.textContent = "Konum alınıyor...";
-            navigator.geolocation.getCurrentPosition(showPosition, showError);
-          } else {
-            locationText.textContent = "Konum servisi desteklenmiyor";
-          }
-        }
-
-        function showPosition(position) {
-          const latitude = position.coords.latitude;
-          const longitude = position.coords.longitude;
-
-          fetch(
-            `https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`
-          )
-            .then((response) => response.json())
-            .then((data) => {
-              const city =
-                data.address.city ||
-                data.address.town ||
-                data.address.village ||
-                "Bilinmeyen Şehir";
-              locationText.textContent = city;
-            })
-            .catch((error) => {
-              locationText.textContent = "Konum bulunamadı";
-            });
-        }
-
-        function showError(error) {
-          switch (error.code) {
-            case error.PERMISSION_DENIED:
-              locationText.textContent = "Konum izni reddedildi";
-              break;
-            case error.POSITION_UNAVAILABLE:
-              locationText.textContent = "Konum bilgisi mevcut değil";
-              break;
-            case error.TIMEOUT:
-              locationText.textContent = "İstek zaman aşımına uğradı";
-              break;
-            case error.UNKNOWN_ERROR:
-              locationText.textContent = "Bilinmeyen bir hata oluştu";
-              break;
-          }
-        }
-
-        locationButton.addEventListener("click", function (e) {
-          e.preventDefault();
-          getLocation();
-        });
-      });
-    </script>
   </body>
 </html>
