Sepet sayfası tamamlandı

--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Hızlıpazar</title>
   </head>
-  <body class="bg-light">
+  <body class="bg-light d-flex flex-column min-vh-100">
     <!-- Header -->
     <header>
       <section class="top-bar">
@@ -42,14 +42,14 @@
                   <i class="fa fa-heart" style="color: #fff"></i>
                   <span class="ms-1 d-none d-sm-inline text-white">Listem</span>
                 </a>
-                <a href="#" class="btn position-relative">
+                <a href="shopping-card.html" class="btn position-relative">
                   <i class="fa fa-shopping-cart" style="color: #fff"></i>
                   <span class="ms-1 d-none d-sm-inline text-white"
                     >Sepetim</span
                   >
                   <span
                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-color">
-                    0
+                    2
                   </span>
                 </a>
               </div>
@@ -312,7 +312,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="mt-3 py-4">
+    <footer class="mt-auto py-4">
       <div class="container">
         <div class="row gy-3">
           <div class="col-md-6 col-lg-4">
