--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                   <span class="ms-1 d-none d-sm-inline text-white">Listem</span>
                   
                 </a>
-                <a href="#" class="btn position-relative">
+                <a href="shopping-card.html" class="btn position-relative">
                   <i class="fa fa-shopping-cart" style="color: #fff"></i>
                   <span class="ms-1 d-none d-sm-inline text-white"
                     >Sepetim</span
                   >
                   <span
                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-color">
-                    0
+                    2
                   </span>
                 </a>
               </div>
