Sepet işlevselliği eklendi ve proje tamamlandı

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <span class="price-discount">34.399 TL</span>
                 <del class="price">38.999 TL</del>
               </div>
-              <a href="#" class=" btn btn-light w-100">
+              <a href="#" onclick="addToCart('1', 'Apple iPhone 13 128 GB Beyaz', 34399, 'img/img-1.jpg'); return false;" class="btn btn-light w-100">
                 <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
               </a>
              </div>
@@ -253,7 +253,7 @@
                   <span class="price-discount">34.199 TL</span>
                   <del class="price">38.699 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('2', 'Apple iPhone 13 128 GB Siyah', 34199, 'img/img-2.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -274,7 +274,7 @@
                   <span class="price-discount">8.299 TL</span>
                   <del class="price">10.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('3', 'Poco C65 256 GB 8 GB Ram', 8299, 'img/img-3.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -295,7 +295,7 @@
                   <span class="price-discount">17.189 TL</span>
                   <del class="price">19.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('4', 'Xiaomi Redmi Note 13 Pro 512GB 12GB', 17189, 'img/img-4.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -316,7 +316,7 @@
                   <span class="price-discount">94.999 TL</span>
                   <del class="price">98.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('5', 'Apple iPhone 16 Pro 256 GB Çöl Titanyum', 94999, 'img/img-5.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -337,7 +337,7 @@
                   <span class="price-discount">7.199 TL</span>
                   <del class="price">8.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('6', 'Samsung Galaxy A06 128 GB 4 GB Ram', 7199, 'img/img-6.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -358,7 +358,7 @@
                   <span class="price-discount">25.169 TL</span>
                   <del class="price">29.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('7', 'Samsung Galaxy S24 FE 128 GB 8 GB Ram', 25169, 'img/img-7.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -375,11 +375,11 @@
                   <i class="fa fa-heart"></i>
                 </a>
                 <a href="#" class="title text-truncate"> <b>Apple</b> iPhone 15 128 GB Yeşil</a>
-                <div class="price-wrap mb-3"></div>
+                <div class="price-wrap mb-3">
                   <span class="price-discount">52.299 TL</span>
                   <del class="price">59.999 TL</del>
                 </div>
-                <a href="#" class=" btn btn-light w-100">
+                <a href="#" onclick="addToCart('8', 'Apple iPhone 15 128 GB Yeşil', 52299, 'img/img-8.jpg'); return false;" class="btn btn-light w-100">
                   <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                 </a>
               </div>
@@ -434,5 +434,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/geolocation.js"></script>
+    <script src="js/shopping-cart.js"></script>
   </body>
 </html>
