--- a/shopping-card.html
+++ b/shopping-card.html
@@ -75,112 +75,50 @@
         <div class="row">
         <h3 class="h4 mb-1 mb-lg-3">Sepetim</h3>
 
-          <div class="col-lg-7">
-            <div class="alert alert-warning p-2">Ücretsiz Kargo</div>
-            <div class="py-3">
-              <ul class="list-group">
-                <li class="py-3 mb-2 border-top list-group-item">
-                  <div class="row align-items-center">
-                    <div class="col-8">
-                      <div class="d-flex align-items-center">
-                        <img src="img/img-8.jpg" style="width: 100px;">
-                        <div class="ms-3">
-                          <a href="" class="text-decoration-none">
-                            <h6 class="mb-0"><b>Apple</b> iPhone 15 128 GB Yeşil</h6>
-                          </a>
-                          <i class="fa-solid fa-trash-can"></i> Sil
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-2">
-                      <select class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                      </select>
-                    </div>
-                    <div class="col-2 text-center">
-                      <span class="fw-bold">52.299 TL</span>
-                    </div>
-                  </div>
-                </li>
-                <li class="py-3 mb-2 border-top list-group-item">
-                  <div class="row align-items-center">
-                    <div class="col-8">
-                      <div class="d-flex align-items-center">
-                        <img src="img/img-5.jpg" style="width: 100px;">
-                        <div class="ms-3">
-                          <a href="" class="text-decoration-none">
-                            <h6 class="mb-0"><b>Apple</b> iPhone 16 Pro 256 GB Çöl Titanyum</h6>
-                          </a>
-                          <i class="fa-solid fa-trash-can"></i> Sil
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-2">
-                      <select class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                      </select>
-                    </div>
-                    <div class="col-2 text-center">
-                      <span class="fw-bold">94.999 TL</span>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-          <div class="col-lg-5">
-            <div class=" card">
-              <div class="pt-5 card-body">
-                <h2 class="h5 mb-4">Sipariş Özeti</h2>
-                <div class="card mb-2">
-                  <div class="list-group list-group-flush">
-                    <div class="d-flex justify-content-center align-items-center list-group-item">
-                      <div class="me-auto">
-                        <div>Sipariş Toplamı</div>
-                      </div>
-                      <span>147.298 TL</span>
-
-                    </div>
-                    <div class="d-flex justify-content-center align-items-center list-group-item">
-                      <div class="me-auto">
-                        <div>Kargo Ücreti</div>
-                      </div>
-                     <span>0 Tl <del> 49.90</del></span>
-                    </div>
-                    <div class="d-flex justify-content-center align-items-center list-group-item">
-                      <div class="me-auto">
-                        <div>Vergi (20%)</div>
-                      </div>
-                      <span>29.459 TL</span>
-                    </div>
-                    <div class="d-flex justify-content-center align-items-center list-group-item">
-                      <div class="me-auto">
-                        <div>Sipariş Toplamı</div>
-                      </div>
-                      <span>147.298 TL</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="d-grid">
-                  <a href="#" class="btn btn-warning btn-lg w-100">Siparişi Tamamla</a>
-                </div>
-              </div>
+          <div class="col-12 col-lg-7">
+            <div class="alert alert-warning p-2 mb-3">
+                <small>Ücretsiz Kargo</small>
             </div>
             <div class="card">
-              <div class="card-body">
-                <h2 class="h5 mb-4">Kupon Kodu Kullan</h2>
-                <form>
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Kupon Kodu">
-                    <button class="btn btn-warning" type="button">Kuponu Uygula</button>
-                  </div>
-                </form>
-              </div>
+                <div class="card-body p-0 p-md-3">
+                    <ul class="list-group shopping-cart">
+                        <!-- Sepet öğeleri buraya dinamik olarak eklenecek -->
+                    </ul>
+                </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-5">
+            <div class="card cart-summary mb-3">
+                <div class="card-body">
+                    <h2 class="h5 mb-4">Sipariş Özeti</h2>
+                    <div class="list-group list-group-flush">
+                        <div class="d-flex justify-content-between align-items-center p-2">
+                            <span>Sipariş Toplamı</span>
+                            <span data-summary="subtotal">0.00 TL</span>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center p-2">
+                            <span>Vergi (20%)</span>
+                            <span data-summary="tax">0.00 TL</span>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center p-2 fw-bold">
+                            <span>Toplam</span>
+                            <span data-summary="total">0.00 TL</span>
+                        </div>
+                    </div>
+                    <div class="d-grid gap-2 mt-4">
+                        <button class="btn btn-warning btn-lg">Siparişi Tamamla</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="h5 mb-3">Kupon Kodu</h2>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Kupon kodunuz">
+                        <button class="btn btn-outline-warning">Uygula</button>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
@@ -240,5 +178,6 @@
     </footer>
     <script src="js/fslightbox-basic-3.4.2/fslightbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/shopping-cart.js"></script>
   </body>
 </html>
